--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,53 @@ html {
     min-height: 100%;
 }
 
+.navbar-inverse {
+    background-color: #5E2241;
+    border-color: #5E2241;
+}
+
+.navbar-inverse, .navbar-brand {
+    color: #CEAEBF;   
+}
+
+navbar-inverse, .btn {
+    background-color: #CEAEBF;
+    color: #5E2241;
+}
+
+.jumbotron {
+    margin-top: 15px;
+    padding-bottom: 25px;
+    color: #000000;
+    text-align: center;
+    text-shadow: 3px 3px 4px #FBE7D4;
+    background-image: url(images/veggies-background.jpg);
+}
+
+#small {
+    color: #1F5829;   
+}
+
+.jumbotron p {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
 body {
     /* Move down content because of fixed navbar at top */
     padding-top: 50px;
     /* Set margin bottom allow for footer height */
     margin-bottom: 50px;
+    background-image: url(images/tartan.png);
+    background-color: #A2C0A7;
+}
+
+#main {
+    background-color: #FBE7D4;
+    padding-bottom: 25px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    margin-bottom: 15px;
 }
 
 footer {
@@ -16,8 +58,8 @@ footer {
     bottom: 0;
     height: 50px;
     width: 100%;
-    background-color: #222222;
-    color: #9d9d9d;
+    background-color: #5E2241;
+    color: #CEAEBF;
     text-align: center;
     padding: 15px;
 }
